syntax = "proto3";

package web3;

service Web3 {
    // RPC interface.
    rpc CallContract (CallContractRequest) returns (CallContractResponse) {}
}

message CallContractRequest {
    // Raw contract request payload that will be passed to the
    // contract (Protocol Buffers serialized).
    bytes payload = 1;
}

message CallContractResponse {
    // Raw contract dependent response payload (Protocol Buffers serialized).
    bytes payload = 1;
}
